@@ -55,8 +55,8 @@
     <class-type type-name='reaction_reagent_itemst' inherits-from='reaction_reagent'>
         <enum base-type='int16_t' name='item_type' type-name='item_type'/>
         <int16_t name='item_subtype' refers-to='(item-subtype-target $$._parent.item_type $)'/>
-        <int16_t name='mat_type' ref-target='material' aux-value='$$.mat_index'/>
-        <int16_t name='mat_index'/>
+        <int16_t name='mat_type' ref-target='material' aux-value='$$.mat_index' default-value='-1'/>
+        <int16_t name='mat_index' default-value='-1'/>
 
         <stl-string name='reaction_class'/>
         <stl-string name='has_material_reaction_product'/>
@@ -131,8 +131,8 @@
     <class-type type-name='reaction_product_itemst' inherits-from='reaction_product'>
         <enum base-type='int16_t' name='item_type' type-name='item_type'/>
         <int16_t name='item_subtype' refers-to='(item-subtype-target $$._parent.item_type $)'/>
-        <int16_t name='mat_type' ref-target='material' aux-value='$$.mat_index'/>
-        <int32_t name='mat_index'/>
+        <int16_t name='mat_type' ref-target='material' aux-value='$$.mat_index' default-value='-1'/>
+        <int32_t name='mat_index' default-value='-1'/>
 
         <int16_t name='probability'/>
         <int16_t name='count'/>
@@ -161,8 +161,8 @@
         <enum name='improvement_type' type-name='improvement_type'/>
         <enum base-type='int32_t' name='improvement_specific_type' type-name='itemimprovement_specific_type'/>
 
-        <int16_t name='mat_type' ref-target='material' aux-value='$$.mat_index'/>
-        <int32_t name='mat_index'/>
+        <int16_t name='mat_type' ref-target='material' aux-value='$$.mat_index' default-value='-1'/>
+        <int32_t name='mat_index' default-value='-1'/>
 
         <int16_t name='probability'/>
 
