@@ -19,6 +19,7 @@ Template for new versions:
 # Future
 
 ## Structures
+- added default values for ``material`` and ``mat_index`` in ``reaction_reagentst`` and ``reaction_productst`` child classes
 
 # 52.03-r1.1
 
